Final styling changes

--- a/styles/Creator.module.css
+++ b/styles/Creator.module.css
@@ -44,6 +44,6 @@
   width: auto;
 }
 
-.imageShadow {
+.continerShadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
