--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,7 +1,6 @@
 .cardContent {
   margin: 40px;
-  /* border: 2px solid; */
-  padding: 20px 30px 30px 30px;
+  padding: 20px 30px;
   border-radius: 10px;
   background-color: white;
 }
@@ -42,5 +41,6 @@
 
 .catNickname {
   text-align: center;
-  padding: 0 0 15px 0;
+  padding: 15px 0;
+  background-color: burlywood;
 }
